<resources>
    <string name="app_name">BAF DIRECTORY</string>
    <string name="name_hq">AIR HQ</string>
    <string name="name_search">SEARCH</string>
    <string name="name_abbr">GENERAL ABBR</string>
    <string name="name_zhr">ZHR</string>
    <string name="name_pkp">PKP</string>
    <string name="app_mtr">MTR</string>
    <string name="app_bsr">BSR</string>
    <string name="app_bbd">BBD</string>
    <string name="app_coxs">COXS</string>
    <string name="dir">/MEA</string>
    <string name="app_dir">/app</string>
    <string name="name_email">EMAIL</string>
    <string name="db_dir">/database_mea</string>
    <string name="bottom_text">                                 FREE SHALL WE KEEP THE SKY OF BANGLADESH                         </string>
    <string name="initial_text"> \n       BY \n </string>
    <string name="air_hq_lodger">AIR HQ &amp; ITS LODGER UNITS</string>
    <string name="air_hq_lodger_cont">AIR HQ &amp; ITS LODGER UNITS (Cont/’d)</string>
    <string name="flying_wing">FLYING WING</string>
    <string name="ops_wing">OPERATIONAL WING</string>
    <string name="maintain_wing">MAINTANCE WING</string>
    <string name="admin_wing">ADMIN WING</string>
    <string name="trg_wing">TRAINING WING</string>
    <string name="lodger_unit">LODGER UNIT</string>
    <string name="bafa">BAFA</string>
    <string name="fly_1">FLYING WING HQ</string>
    <string name="fly_2">1 SQUADRON</string>
    <string name="fly_3">3 SQUADRON</string>
    <string name="fly_4">21 SQUADRON</string>
    <string name="fly_5">25 SQUADRON</string>
    <string name="maint_0">MAINTANANCE WING HQ</string>
    <string name="maint_1">AIRCRAFT ENGINEERING SQN</string>
    <string name="maint_2">CONTROL SQN</string>
    <string name="maint_3">FIELD MAINTANANCE SQN</string>
    <string name="maint_4">C &amp;  E SQN</string>
    <string name="maint_5">MT SQN</string>
    <string name="maint_6">ARMAMENT SQN</string>
    <string name="maint_7">SUPPLY SQN</string>
    <string name="ops_0">OPS WING HQ</string>
    <string name="ops_1">AIR TRAFFIC SQN</string>
    <string name="ops_2">MET SQN</string>
    <string name="ops_3">EXERCISE  SQN</string>
    <string name="admin_0">ADMIN WING HQ</string>
    <string name="admin_1">PERSONNEL SQN</string>
    <string name="admin_2">ACCOUNTS SQN</string>
    <string name="admin_3">MEDICAL  SQN</string>
    <string name="admin_4">SECURITY SQN</string>
    <string name="training_0">TRAINING WING HQ</string>
    <string name="training_1">EDN TRAINING SQN</string>
    <string name="training_2">C &amp; E TRAINING SQN</string>
    <string name="training_3">AERO  TRAINING SQN</string>
    <string name="training_4">ADMIN TRAINING SQN</string>
    <string name="lodger_1">301 SAM UNIT</string>
    <string name="lodger_2">2 PROVOST &amp; SECURITY UNIT</string>
    <string name="lodger_3">202 MU</string>
    <string name="lodger_4">EMBARKATION UNIT</string>
    <string name="lodger_5">74 SQUADRON</string>
    <string name="lodger_6">2 FIELD UNIT</string>
    <string name="lodger_7">OFFICERS MESS</string>
    <string name="lodger_8">OTHERS MESS</string>
    <string name="m_ops_0">OPS WING HQ</string>
    <string name="m_ops_1">AIR TRAFFIC SQN</string>
    <string name="m_ops_2">MET SQN</string>
    <string name="m_ops_3">BAFA</string>
    <string name="m_ops_4">FTW</string>
    <string name="m_ops_5">NO 11 SQN</string>
    <string name="m_ops_6">NO 15 SQN</string>
    <string name="m_ops_7">NO 18 SQN</string>
    <string name="m_ops_8">ATW</string>
    <string name="m_ops_9">CW</string>
    <string name="m_lodger_1">"OTS"</string>
    <string name="m_lodger_2">3 PROVOST &amp; SECURITY UNIT</string>
    <string name="m_lodger_3">210 MU</string>
    <string name="m_lodger_4">75 SQUADRON</string>
    <string name="m_lodger_5">3 FIELD UNIT</string>
    <string name="m_lodger_6">FIS</string>
    <string name="m_lodger_7">OFFICERS MESS</string>
    <string name="m_lodger_8">OTHERS MESS</string>
    <string name="m_lodger_9">BAFWWA</string>
    <string name="pkp_maint_1">RADAR SQN</string>
    <string name="pkp_maint_2">FIELD MAINTANENCE SQN</string>
    <string name="pkp_maint_3">C &amp; E  SQN</string>
    <string name="pkp_maint_4">MT SQN</string>
    <string name="pkp_maint_5">ARMT SQN</string>
    <string name="pkp_maint_6">SUPPLY SQN</string>
    <string name="pkp_lodger_1">NO 4 FU</string>
    <string name="pkp_lodger_2">NO 4 P &amp; S</string>
    <string name="pkp_lodger_3">MES</string>
    <string name="pkp_lodger_4">OFFICERS MESS</string>
    <string name="pkp_lodger_5">OTHERS MESS</string>
    <string name="pkp_lodger_6">MISC</string>
    <string name="comcontrl">Command &amp; Control</string>
    <string name="national_anthem_title">জাতীয় সংগীত</string>
    <string name="national_anthem"><![CDATA[<p><strog> <u>জাতীয় সংগীত</u></strong></p> <p>আমার সোনার বাংলা,</p> <p>আমি তোমায় ভালবাসি।</p> <p>চিরদিন তোমার আকাশ,</p> <p>তোমার বাতাস</p> <p>আমার প্রাণে বাজায় বাঁশি।</p> <p>ও মা,</p <p>ফাগুনে তোর আমের বনে</p> <p>ঘ্রাণে পাগল করে</p> <p>মরি হায়, হায় রে-</p> <p>ও মা,</p> <p>অঘ্রানে তোর ভরা ক্ষেতে,</p> <p>আমি কী দেখেছি মধুর হাসি।।</p> <p>কী শোভা, কী ছায়া গো,</p> <p>কী স্নেহ, কী মায়া গো,</p> <p>কী আঁচল বিছায়েছ</p> <p>বটের মূলে,</p> <p>নদীর কূলে কূলে।</p> <p>মা, তোর মুখের বাণী</p> <p>আমার কানে লাগে</p> <p>সুধার মতো-</p> <p>মা তোর বদন খানি মলিন হলে</p> <p>আমি নয়ন</p> <p>ও মা আমি নয়ন জলে ভাসি</p> <p>সোনার বাংলা,</p <p>আমি তোমায় ভালবাসি।</p> ]]></string>
</resources>