<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/top_linear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/button_background"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bangladesh Airforce"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_linear"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:layout_marginTop="1dp"
                android:onClick="MAINT1"
                android:background="@drawable/home_selector"
                >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_0"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/llOrderfood"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:onClick="MAINT2"
                android:background="@drawable/home_selector"
                >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_1"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_alignLeft="@+id/llOrderfood"
                android:layout_below="@+id/llOrderfood"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="MAINT3"
                android:background="@drawable/home_selector"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_7"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_alignLeft="@+id/llOrderfood"
                android:layout_below="@+id/llOrderfood"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="MAINT4"
                android:background="@drawable/home_selector"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_2"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_alignLeft="@+id/llOrderfood"
                android:layout_below="@+id/llOrderfood"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="MAINT5"
                android:background="@drawable/home_selector"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_3"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_alignLeft="@+id/llOrderfood"
                android:layout_below="@+id/llOrderfood"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="MAINT6"
                android:background="@drawable/home_selector"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_4"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_alignLeft="@+id/llOrderfood"
                android:layout_below="@+id/llOrderfood"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="MAINT7"
                android:background="@drawable/home_selector"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_5"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:layout_alignLeft="@+id/llOrderfood"
                android:layout_below="@+id/llOrderfood"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="MAINT8"
                android:background="@drawable/home_selector"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/maint_6"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>